--- a/client/src/locales/de/translation.json
+++ b/client/src/locales/de/translation.json
@@ -5,37 +5,35 @@
         "selectLanguage": "Sprache wählen"
     },
     "onboarding": {
-        "step1_title": "Hallo, Fremder! 👋",
-        "step1_desc": "Lernen wir uns kennen. Eine gültige E-Mail ist erforderlich.",
-        "username_placeholder": "Benutzername (z.B. CaptainAwesome)",
+        "step1_title": "Sprache auswählen",
+        "step1_desc": "Bitte wählen Sie Ihre bevorzugte Sprache.",
+        "step2_title": "Identität & Standort",
+        "step2_desc": "Warum wir fragen: Um Ihr Profil zu personalisieren und regionale Inhalte anzubieten.",
+        "username_placeholder": "Benutzername",
         "email_placeholder": "E-Mail-Adresse",
-        "profanity_error": "Benutzername enthält unangemessene Sprache.",
-        "verify_email": "Bestätigen",
+        "country_placeholder": "Land wählen",
+        "city_placeholder": "Stadt wählen",
+        "verify_email": "Verifizieren",
         "sending": "Senden...",
-        "submit": "Absenden",
+        "submit": "Bestätigen",
         "resend": "Erneut senden",
-        "verified": "✓ E-Mail verifiziert",
+        "verified": "Verifiziert",
+        "select_country_first": "Bitte wählen Sie zuerst ein Land",
+        "step3_title": "Zweck des Besuchs",
+        "step3_desc": "Warum wir fragen: Um die passende Raumkapazität zu empfehlen.",
+        "purpose_a": "Watch & Date",
+        "purpose_a_desc": "2-Personen-Räume",
+        "purpose_b": "Mit Freunden schauen",
+        "purpose_b_desc": "Gruppen (2-10 Personen)",
+        "purpose_c": "Streams schauen",
+        "purpose_c_desc": "Großevents (10+ Personen)",
+        "step4_title": "Erweiterte Funktionen",
+        "step4_desc": "Warum wir fragen: Um KI-Analysen mit Gemini zu ermöglichen.",
+        "apikey_placeholder": "Gemini API Key (Optional)",
         "back": "Zurück",
         "next": "Weiter",
         "start_watching": "Zuschauen",
-        "step2_title": "Nur zur Sicherheit... 🎂",
-        "step2_desc": "Wie alt bist du? Wir passen die Inhalte deinem Alter an.",
-        "age_placeholder": "Alter",
-        "step3_title": "KI-Magie freischalten 🤖",
-        "step3_desc": "Wenn du einen Gemini API Key hast, gib ihn hier ein für KI-Untertitel und Empfehlungen. Du kannst das überspringen!",
-        "apikey_placeholder": "Gemini API Key (beginnt mit AIza...)",
-        "step4_title": "Wähle deinen Vibe 🍿",
-        "step4_desc": "Wähle Genres, die du liebst. Wir priorisieren diese.",
-        "step5_title": "Go Premium? 💎",
-        "step5_desc": "Unterstütze uns und erhalte 4K-Streaming und keine Werbung.",
-        "premium_yes": "Ja! Nimm mein Geld! ($0.00 heute)",
-        "premium_no": "Nein danke, ich bin pleite.",
-        "step6_title": "Kleine Welt! 🌍",
-        "step6_desc": "Wie hast du unser kleines Kino gefunden?",
-        "step7_title": "Rote Linien 🚫",
-        "step7_desc": "Wähle Inhalte, die du absolut NIEMALS sehen möchtest.",
-        "step8_title": "Du bist bereit! 🎉",
-        "step8_desc": "Willkommen im Club, <1>{{username}}</1>.\n\nWir haben deine Einstellungen gespeichert. Du kannst sie später ändern."
+        "profanity_error": "Unangemessener Benutzername."
     },
     "profile": {
         "back_dashboard": "← Dashboard",
