--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -5,37 +5,71 @@
         "selectLanguage": "Select Your Language"
     },
     "onboarding": {
-        "step1_title": "Hello, Stranger! 👋",
-        "step1_desc": "Let's get to know each other. Valid email required.",
-        "username_placeholder": "Username (e.g. CaptainAwesome)",
+        "step1_title": "Select Language",
+        "step1_desc": "Please select your preferred language.",
+        "step2_title": "Identity & Location",
+        "step2_desc": "Why we ask: To personalize your profile and connect you with local peers.",
+        "username_placeholder": "Username (e.g. MovieBuff)",
         "email_placeholder": "Email Address",
-        "profanity_error": "Username contains inappropriate language.",
-        "verify_email": "Verify Email",
+        "country_placeholder": "Select Country",
+        "city_placeholder": "Select City",
+        "verify_email": "Verify",
         "sending": "Sending...",
         "submit": "Submit",
         "resend": "Resend",
-        "verified": "✓ Email Verified",
+        "verified": "Verified",
+        "step3_title": "Purpose of Visit",
+        "step3_desc": "Why we ask: To recommend the right room size and settings for you.",
+        "purpose_a": "Watch & Date",
+        "purpose_a_desc": "Intimate 2-person rooms",
+        "purpose_b": "Watch with Friends",
+        "purpose_b_desc": "Group fun (2-10 people)",
+        "purpose_c": "Watch Streams",
+        "purpose_c_desc": "Large events (10+ people)",
+        "step4_api_title": "Power Up with AI",
+        "step4_api_desc": "Why we ask: To provide advanced content analysis and smart features using Gemini.",
+        "apikey_placeholder": "Gemini API Key (Optional)",
+        "validating": "Validating...",
+        "key_valid": "API Key Validated",
+        "key_invalid": "Invalid API Key",
+        "gender_title": "Gender?",
+        "gender_desc": "For pairing (don't laugh!).",
+        "male": "Male",
+        "female": "Female",
+        "social_title": "Socials?",
+        "social_desc": "Want to add your Instagram/Twitter? (Optional)",
+        "social_yes": "Yes, add it",
+        "social_no": "No, keep it private",
+        "social_placeholder": "@username",
+        "genres_title": "Movie Taste 🍿",
+        "genres_desc": "What do you like to watch?",
+        "blacklist_title": "Red Lines 🚫",
+        "blacklist_desc": "What do you absolutely NOT want to see?",
+        "bio_title": "Short Bio",
+        "bio_desc": "Tell us a bit about yourself (Optional).",
+        "bio_yes": "Write Bio",
+        "bio_no": "Skip",
+        "bio_placeholder": "I love sci-fi and pizza...",
+        "photo_title": "Face Reveal? 📸",
+        "photo_desc": "Adding a real photo is highly recommended for 'Watch & Date'.",
+        "photo_btn": "Upload Photo",
+        "ai_partner_title": "Last Resort... 🤖",
+        "ai_partner_desc": "Sad to say, but if you think you won't find anyone... want us to build an AI Partner for you? (No strings attached, promise).",
+        "ai_yes": "Yes (I'm lonely)",
+        "ai_no": "No (I have hope)",
+        "group_size_title": "Squad Size? 👥",
+        "group_size_desc": "How many people are joining?",
+        "group_small": "Small Circle (2-5)",
+        "group_large": "Large Party (6-10)",
+        "stream_vibe_title": "Stream Vibe? 📡",
+        "stream_vibe_desc": "What's the energy of the stream?",
+        "stream_chill": "Chill / Relaxed",
+        "stream_hype": "Hype / Energetic",
         "back": "Back",
         "next": "Next",
-        "start_watching": "Start Watching",
-        "step2_title": "Just checking... 🎂",
-        "step2_desc": "How old are you? We curate content based on age appropriateness.",
-        "age_placeholder": "Age",
-        "step3_title": "Unlock AI Magic 🤖",
-        "step3_desc": "If you have a Gemini API Key, enter it here to enable AI subtitles and recommendations. You can skip this!",
-        "apikey_placeholder": "Gemini API Key (starts with AIza...)",
-        "step4_title": "Pick your Vibe 🍿",
-        "step4_desc": "Select the genres you love. We'll prioritize these.",
-        "step5_title": "Go Premium? 💎",
-        "step5_desc": "Support us and get 4K streaming and zero ads.",
-        "premium_yes": "Yes! Take my money! ($0.00 today)",
-        "premium_no": "No thanks, I'm broke.",
-        "step6_title": "Small world! 🌍",
-        "step6_desc": "How did you stumble upon our little cinema?",
-        "step7_title": "Red Lines 🚫",
-        "step7_desc": "Select content types you absolutely NEVER want to see.",
-        "step8_title": "You're All Set! 🎉",
-        "step8_desc": "Welcome to the club, <1>{{username}}</1>.\n\nWe've saved your preferences. You can always change them later in settings."
+        "start_watching": "Enter Cinema",
+        "final_title": "You're All Set! 🎉",
+        "final_desc": "Welcome to the club, <1>{{username}}</1>."
     },
     "profile": {
         "back_dashboard": "← Dashboard",
