--- a/client/src/locales/tr/translation.json
+++ b/client/src/locales/tr/translation.json
@@ -5,37 +5,43 @@
         "selectLanguage": "Dilinizi Seçiniz"
     },
     "onboarding": {
-        "step1_title": "Merhaba, Yabancı! 👋",
-        "step1_desc": "Tanışalım. Geçerli bir e-posta adresi gerekli.",
-        "username_placeholder": "Kullanıcı Adı (örn. KaptanHarika)",
+        "step1_title": "Dil Seçimi",
+        "step1_desc": "Lütfen tercih ettiğiniz dili seçin.",
+        "step2_title": "Kimlik & Konum",
+        "step2_desc": "Neden soruyoruz: Profilinizi kişiselleştirmek ve bölgesel içerik sunmak için.",
+        "username_placeholder": "Kullanıcı Adı",
         "email_placeholder": "E-posta Adresi",
-        "profanity_error": "Kullanıcı adı uygunsuz dil içeriyor.",
-        "verify_email": "Doğrula",
+        "country_placeholder": "Ülke Seçiniz",
+        "city_placeholder": "Şehir Seçiniz",
+        "verify_email": "E-postayı Doğrula",
         "sending": "Gönderiliyor...",
         "submit": "Onayla",
         "resend": "Tekrar Gönder",
-        "verified": "✓ E-posta Doğrulandı",
+        "verified": "Doğrulandı",
+        "select_country_first": "Lütfen önce bir ülke seçin",
+        "step3_title": "Kullanım Amacı",
+        "step3_desc": "Neden soruyoruz: Size en uygun oda tipini önermek için.",
+        "purpose_a": "Watch & Date",
+        "purpose_a_desc": "2 kişilik özel odalar",
+        "purpose_b": "Arkadaşlarla İzle",
+        "purpose_b_desc": "Grup odaları (2-10 kişi)",
+        "purpose_c": "Yayınları İzle",
+        "purpose_c_desc": "Büyük etkinlikler (10+ kişi)",
+        "step4_title": "Gelişmiş Özellikler",
+        "step4_desc": "Neden soruyoruz: Gemini AI ile gelişmiş analiz ve hizmetler sunmak için.",
+        "apikey_placeholder": "Gemini API Anahtarı (Opsiyonel)",
         "back": "Geri",
+        "group_size_title": "Ekip Büyüklüğü? 👥",
+        "group_size_desc": "Kaç kişi katılacak?",
+        "group_small": "Küçük Ekip (2-5)",
+        "group_large": "Kalabalık Parti (6-10)",
+        "stream_vibe_title": "Yayın Modu? 📡",
+        "stream_vibe_desc": "Yayının enerjisi nasıl olsun?",
+        "stream_chill": "Sakin / Chill",
+        "stream_hype": "Hareketli / Hype",
         "next": "İleri",
         "start_watching": "İzlemeye Başla",
-        "step2_title": "Küçük bir kontrol... 🎂",
-        "step2_desc": "Kaç yaşındasın? İçerikleri yaşına göre ayarlıyoruz.",
-        "age_placeholder": "Yaş",
-        "step3_title": "Yapay Zeka Büyüsü 🤖",
-        "step3_desc": "Gemini API Anahtarın varsa, AI altyazı ve önerileri için buraya gir. Bunu atlayabilirsin!",
-        "apikey_placeholder": "Gemini API Anahtarı (AIza... ile başlar)",
-        "step4_title": "Tarzını Seç 🍿",
-        "step4_desc": "Sevdiğin türleri seç. Bunlara öncelik vereceğiz.",
-        "step5_title": "Premium'a Geç? 💎",
-        "step5_desc": "Bizi destekle, 4K yayın ve reklamsız deneyim kazan.",
-        "premium_yes": "Evet! Paramı al! (Bugün $0.00)",
-        "premium_no": "Hayır sağ ol, fakirim.",
-        "step6_title": "Dünya küçük! 🌍",
-        "step6_desc": "Küçük sinemamızı nasıl buldun?",
-        "step7_title": "Kırmızı Çizgiler 🚫",
-        "step7_desc": "Asla görmek istemediğin içerik türlerini seç.",
-        "step8_title": "Hazırsın! 🎉",
-        "step8_desc": "Kulübe hoşgeldin, <1>{{username}}</1>.\n\nTercihlerini kaydettik. Ayarlardan daha sonra değiştirebilirsin."
+        "profanity_error": "Kullanıcı adı uygunsuz içerik barındırıyor."
     },
     "profile": {
         "back_dashboard": "← Panel",
